override.css
#route-input {
    position:fixed; 
    top: 90px; 
    left: 10px; 
    z-index: 999;
}

nav {height: 10vh;}

aside {
    height: 90vh;
}

#sidebar {
    height: 90vh;
    width: 25vw;
    background-color: white;
    position: fixed;
    top: 10vh;
    left: 0;
}

#route-input {
    background-color: #00205B;
    width: 25vw;
    position: fixed;
    top: 10vh;
    left: 0;
    height: 150px;
    z-index: 990;
    align-items: center;
    justify-items: center;
}

h2 {
    font-weight: 700;
    margin-top: calc(110px + 10vh);
    padding-left: 20px;
}

h2.box {
    background-color: #FFC70A;
    font-weight: 700;
    margin: 0 2vw;
    font-weight: 500;
    font-size: 24px;
    width: 21vw;
    text-align: center;
    padding: 10px 0;
    z-index: 1000;
    position: fixed;
    top: calc(130px + 10vh);
}

h3 {
    font-weight: 600;
    font-size: 18px;
}

#access-features {
    padding-left: 20px;
    height: 40vh;
    overflow-y: scroll;
}

#directions-container {
    position: relative;
    top: calc(140px + 10vh);
    left: 30px;
}

#directions {
    list-style: none;
    padding-left: 0;
    height: 34vh;
    overflow-y: scroll;
    width: 20vw;
}

#directions li {
    padding-bottom: 5px;
}

#find-route {
    width: 15vw;
    position: fixed;
    bottom: 30px;
    margin: 0 5vw;
    background-color: #FFC70A;
    color: #363636;
}

#finish-route {
    width: 7vw;
    position: fixed;
    bottom: 30px;
    left: 15vw;
    background-color: #283FAF;
    color: #ffffff;
}

main {
    height: 90vh;
}

#input-overlay {
    position: absolute;
    top: calc(10vh + 32px);
    left: 70px;
    z-index: 999;
}

.leaflet-control-zoom {
    position: fixed;
    bottom: 32px;
    right: 24px;
}

.leaflet-control-layers-overlays > label {padding: 5px 0;}

.layer-key > img {margin: 0 5px;}

#start-building-overlay, #end-building-overlay {
    width: 250px;
}
#start-floor-overlay, #end-floor-overlay {
    width: 100px;
}

#start-building, #end-building {
    width: 70%;
}

footer {
    z-index: 999;
    position: fixed;
    bottom: 3px;
    left: 6px;
    font-size: 14px;
}

